fix: restore flex cells spacing, tweak h2 spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -194,7 +194,7 @@ h2 {
 
   text-align: center;
   margin-top: 1.5em;
-  margin-bottom: 0.75em;
+  margin-bottom: 0.5em;
 }
 
 h3 {
@@ -272,8 +272,7 @@ a:active {
 }
 
 .grid-item {
-  padding: 0;
-  margin: 2.5rem 0;
+  padding: 0.25rem 0;
 }
 
 .fa {
@@ -304,6 +303,7 @@ a:active {
       border-width: var(--line-width);
       border-radius: var(--rounding);
       padding: 0.75rem 1.5rem;
+      margin: 0;
       flex-basis: 230px;
       flex-grow: 4;
       min-width: 230px;
